# WIFA

./: .buildinfo  .gitlab-ci.yml  .pre-commit-config.yaml  API.html  Functions.html  InputsOutputs.html  README.md  Tools.html  codesaturne.html  cs_api.html  cs_equations.html  cs_inflow.html  cs_mesh.html  cs_turbines.html  examples.html  foxes.html  foxes_api.html  genindex.html  index.html  installation.html  main_api.html  objects.inv  pyproject.toml  pywake.html  pywake_api.html  pywake_ellipsys.html  references.html  search.html  searchindex.js  wayve.html  wayve_api.html
.github/workflows/: build-dev-docs.yml  deploy-docs.yml  run_tests.yml
docs/: requirements.txt
docs/source/: API.rst  CLI.rst  conf.py  index.rst  installation.rst  windio.rst
docs/source/_static/css/: custom.css
docs/source/getting_started/: examples.rst  index.rst  installation.rst  overview.rst
docs/source/tools/: codesaturne.rst  cs_inflow.rst  foxes.rst  index.rst  pywake.rst  pywake_ellipsys.rst  wayve.rst
examples/cases/KUL_LES/wind_energy_system/: analysis_PB.yaml  analysis_US.yaml  analysis_VM.yaml  analysis_pywake.yaml  system.yaml  system_pywake.yaml
examples/cases/timeseries_with_speed_map/plant_energy_resource/: Stochastic_atHubHeight.nc
examples/cases/turbine_specific_speeds_timeseries/plant_energy_resource/: Stochastic_atHubHeight.nc
examples/cases/turbine_specific_speeds_timeseries/plant_energy_site/: FLOW_toy_study_energy_site.yaml
examples/cases/turbine_specific_speeds_timeseries/wind_energy_system/: system.yaml
tests/: conftest.py  test_cs.py  test_example_schema.py  test_floris.py  test_foxes.py  test_pywake.py  test_pywake_submodels.py  test_wayve.py
wifa/: __init__.py  _optional.py  floris_api.py  foxes_api.py  main_api.py  pywake_api.py  wayve_api.py
wifa/cs_api/cs_modules/csLaunch/: cs_launch_modules.py  cs_run_function.py  generate_salome_mesh.py
wifa/cs_api/cs_modules/csPostpro/: cs_postprocess_utils.py  write_cs_fields.py  write_cs_turbine_data.py
wifa/cs_api/cs_sources/Farm/DATA/: code_saturne  setup.xml
wifa/cs_api/cs_sources/Farm/SRC/: cs_user_boundary_conditions.cpp  cs_user_extra_operations.cpp  cs_user_mesh.cpp  cs_user_parameters.cpp  cs_user_source_terms.cpp  cs_user_zones.cpp  cs_wind_farm.c  cs_wind_farm.cpp  cs_wind_farm.h  prototypes.h
wifa/cs_api/cs_sources/Precursor/DATA/: setup.xml
wifa/cs_api/cs_sources/Precursor/SRC/: cs_user_boundary_conditions.cpp  cs_user_extra_operations.cpp  cs_user_source_terms.cpp
